--- a/DataBank_Case.ipynb
+++ b/DataBank_Case.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHEdGW6uwjGrYgUM6fc+yF",
+      "mount_file_id": "https://github.com/marianamartins228/BankMarketingCase/blob/main/DataBank_Case.ipynb",
+      "authorship_tag": "ABX9TyP29W9y6UhLg3M8OR9ez8tz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +28,119 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ANÁLISE EXPLORATÓRIA E LIMPEZA DOS DADOS"
+      ],
+      "metadata": {
+        "id": "xg0AOM794XNT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Importação das bibliotecas"
+      ],
+      "metadata": {
+        "id": "v-A_2gso4-sE"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "hpb7vf-W06EU"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "pd.set_option('display.max_columns', None)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Leitura do dataset"
+      ],
+      "metadata": {
+        "id": "SlM_9OPPGUcx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Databank = pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/projeto módulo introdutório usp esalq/bank-additional-full.csv\", delimiter=\";\")"
+      ],
+      "metadata": {
+        "id": "-dzVJNRJGaqy"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Databank.head(5))"
+      ],
+      "metadata": {
+        "id": "G9_LLH24HBYu",
+        "outputId": "95095f35-1c38-4cb4-923e-151199352eaf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   age        job  marital    education  default housing loan    contact  \\\n",
+            "0   56  housemaid  married     basic.4y       no      no   no  telephone   \n",
+            "1   57   services  married  high.school  unknown      no   no  telephone   \n",
+            "2   37   services  married  high.school       no     yes   no  telephone   \n",
+            "3   40     admin.  married     basic.6y       no      no   no  telephone   \n",
+            "4   56   services  married  high.school       no      no  yes  telephone   \n",
+            "\n",
+            "  month day_of_week  duration  campaign  pdays  previous     poutcome  \\\n",
+            "0   may         mon       261         1    999         0  nonexistent   \n",
+            "1   may         mon       149         1    999         0  nonexistent   \n",
+            "2   may         mon       226         1    999         0  nonexistent   \n",
+            "3   may         mon       151         1    999         0  nonexistent   \n",
+            "4   may         mon       307         1    999         0  nonexistent   \n",
+            "\n",
+            "   emp.var.rate  cons.price.idx  cons.conf.idx  euribor3m  nr.employed   y  \n",
+            "0           1.1          93.994          -36.4      4.857       5191.0  no  \n",
+            "1           1.1          93.994          -36.4      4.857       5191.0  no  \n",
+            "2           1.1          93.994          -36.4      4.857       5191.0  no  \n",
+            "3           1.1          93.994          -36.4      4.857       5191.0  no  \n",
+            "4           1.1          93.994          -36.4      4.857       5191.0  no  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Achei interessante trazer um glossário para o que significa algumas dessas colunas, com objetivo de consultas no decorrer da análise. Muitas vezes a coluna vem nomeada de uma forma vaga, então é necessário consultar a documentação do dataset para validar o conteúdo.\n",
+        "\n",
+        "* default - possui valor inadimplente?\n",
+        "* balance - média de saldo anual\n",
+        "* housing - possui financiamento de habitação?\n",
+        "* campaign - número de contatos realizados com esse cliente na campanha atual\n",
+        "* pdays - número de dias desde o último contato com o cliente na última campanha, se for -1 quer dizer que o cliente ainda não foi contactado\n",
+        "* previous - número de contatos performados antes da campanha atual\n",
+        "* poutcome - resultado da campanha anterior, variável categórica\n",
+        "* y - o cliente adquiriu o CDB?\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "c303dBVMNcXG"
+      }
     }
   ]
 }
